tests/Column/expected
"
| name    | age | favorite color |
| ------- | --- | -------------- |
| "Bob"   | 12  | "blue"         |
| "Alice" | 17  | "green"        |
| "Eve"   | 13  | "red"          |"

[<"Bob", "Alice", "Eve"]
[<12, 17, 13]
Error: Can't find an implementation for Field StudentSchema "grade" ?sa.

(Interactive):1:12--1:19
 1 |     column "grade" students
                ^^^^^^^


"
| name    | age | favorite color | final |
| ------- | --- | -------------- | ----- |
| "Bob"   | 12  | "blue"         | 87    |
| "Alice" | 17  | "green"        | 85    |
| "Eve"   | 13  | "red"          | 77    |"

[<"Bob", "Alice", "Eve"]
[<12, 17, 13]
[<87, 85, 77]

"
| name    | age | favorite color | final | grade |
| ------- | --- | -------------- | ----- | ----- |
| "Bob"   | 12  | "blue"         | 87    | "A"   |
| "Alice" | 17  | "green"        | 85    | "A"   |
| "Eve"   | 13  | "red"          | 77    | "B"   |"

"
| name    | favorite color |
| ------- | -------------- |
| "Bob"   | "blue"         |
| "Alice" | "green"        |
| "Eve"   | "red"          |"
"
| name    | age |
| ------- | --- |
| "Bob"   | 12  |
| "Alice" | 17  |
| "Eve"   | 13  |"
Error: Can't find an implementation for Show (Table (drop StudentSchema ?fld)).

(Interactive):1:5--1:39
 1 |     show $ dropColumn "grade" students
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


[<MkDPair "name" (There Here), MkDPair "favorite color" Here]
Error: Can't find an implementation for AllColumns [<("name" :! String), ("age" :! Nat), ("favorite color" :! String)] String.

(Interactive):1:5--1:29
 1 |     allColumns StudentSchema
         ^^^^^^^^^^^^^^^^^^^^^^^^


